--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
           architecture: 'x64'
           distribution: 'full'
           version: '8.2'
-          packages: 'peg-gen'
-                    'pprint'
+          packages: ['peg-gen' 'pprint']
       # Runs a single command using the runners shell
       
       - name: compile
