--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,14 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: Checkout
         uses: actions/checkout@master
       - name: Install Z3
         uses: pavpanchekha/setup-z3@1.2.2
         with:
-          version: '4.8.14'
+          version: '4.8.10'
       - name: Install Racket
         uses: Bogdanp/setup-racket@v1.6.1
         with:
