--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,8 @@ jobs:
         uses: actions/checkout@master
       - name: Install Z3
         run: |
-          mkdir bin                  &&
-          wget $Z3_URL -nv -O bin/z3 &&
-          chmod +x bin/z3            &&
-          mv bin/z3 /usr/bin/z3
+          wget $Z3_URL -nv -O z3 &&
+          chmod +x z3
       - name: Install Racket
         uses: Bogdanp/setup-racket@v1.6.1
         with:
